Made Changes to Mobile app--Access Token and Access Secret Recieved

--- a/Dropbox/res/values/strings.xml
+++ b/Dropbox/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, DropboxActivity!</string>
     <string name="app_name">Dropbox</string>
+    <string name="view1">request token</string>
 </resources>
