Working(Kanpur executable with new app key secret)

--- a/DropboxV2/res/values/strings.xml
+++ b/DropboxV2/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, DropboxV2Activity!</string>
-    <string name="app_name">DropboxV2</string>
+    <string name="app_name">DeviceConnect</string>
 </resources>
